--- a/CSS-atv/index.html
+++ b/CSS-atv/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <div class="red"></div>
-        <div class="yellow"></div>
-        <div class="green"></div>
+        <div class="circle red"></div>
+        <div class="circle yellow"></div>
+        <div class="circle green"></div>
     </header>
 
     <section id="homepage">
@@ -26,9 +26,8 @@
     </section>
 
     <footer>
-        <div>
-            
-        </div>
+        <img src="CSS/images/footer-icons.png" alt=""
+        
     </footer>
 </body>
 </html>
