--- a/Aula-flexbox/index.html
+++ b/Aula-flexbox/index.html
@@ -90,15 +90,17 @@
     </div>
 
     <div class="espacado10 div-flex">
-        <img src="img/icone-bicicleta.png" alt="">
-        
-        <div>
+        <div class="emcima10">
             <img src="img/icone-bicicleta.png" alt="">
-            <img src="img/icone-fantasma.png" alt="">
-            <img src="img/icone-hipopotamo.png" alt="">
+            
+            <div class="emcima-direita10">
+                <img src="img/icone-bicicleta.png" alt="">
+                <img src="img/icone-fantasma.png" alt="">
+                <img src="img/icone-hipopotamo.png" alt="">
+            </div>
         </div>
 
-        <div>
+        <div class="embaixo10">
             <div>
                 <img src="img/icone-fantasma.png" alt="">
                 <img src="img/icone-hipopotamo.png" alt="">
