--- a/ProjetoAurum/index.html
+++ b/ProjetoAurum/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aurum Lab - Home</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
 
@@ -18,7 +20,7 @@
                 <li><a href="" class="link-ativo">Sobre</a></li>
                 <li><a href="" class="link-ativo">Dashboard</a></li>
                 <li>
-                    <a href="" class="item-login">
+                    <a href="login.html" class="item-login">
                     <img class="cadeado" src="assets/icon/lock.svg" alt="">  
                     Login 
                     </a>
